update logo and fix loader

--- a/index.html
+++ b/index.html
@@ -54,6 +54,42 @@
             box-shadow: 0 0 20px var(--glow), 0 0 40px var(--glow), 0 0 60px var(--glow);
         }
 
+        /* Preloader */
+        body.preloading {
+            overflow: hidden;
+        }
+
+        body.preloading > *:not(#preloader) {
+            visibility: hidden;
+        }
+
+        #preloader {
+            position: fixed;
+            inset: 0;
+            z-index: 2000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: linear-gradient(135deg, #0f172a 0%, #1e293b 50%, #334155 100%);
+            transition: opacity 0.5s ease;
+        }
+
+        #preloader.fade-out {
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        #preloader .preloader-text {
+            font-size: 3rem;
+            font-weight: 800;
+            background: linear-gradient(45deg, var(--primary), var(--accent));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-shadow: 0 0 20px var(--glow);
+            animation: glow-pulse 2s ease-in-out infinite alternate;
+        }
+
         /* Scroll animations */
         .fade-in {
             opacity: 0;
@@ -110,6 +146,20 @@
             -webkit-text-fill-color: transparent;
             background-clip: text;
             text-shadow: 0 0 20px var(--glow);
+            display: inline-flex;
+            align-items: center;
+        }
+
+        .logo img {
+            height: 40px;
+            width: auto;
+            margin-right: 10px;
+            filter: drop-shadow(0 0 10px var(--glow));
+            transition: filter 0.3s ease;
+        }
+
+        .logo:hover img {
+            filter: drop-shadow(0 0 14px var(--accent));
         }
 
         .nav-links {
@@ -612,7 +662,12 @@
     </style>
 </head>
 
-<body>
+<body class="preloading">
+    <!-- Preloader -->
+    <div id="preloader">
+        <div class="preloader-text">Mooniris</div>
+    </div>
+
     <!-- Parallax elements -->
     <div class="parallax parallax-1"></div>
     <div class="parallax parallax-2"></div>
@@ -621,7 +676,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <a href="#" class="logo">Mooniris</a>
+            <a href="#" class="logo"><img src="https://i.imgur.com/NjNtoLW.png" alt="Mooniris logo">Mooniris</a>
             <div class="nav-links">
                 <a href="#about">About</a>
                 <a href="#skills">Services</a>
@@ -1037,45 +1092,37 @@
             });
         });
 
-        // Add loading screen
-        window.addEventListener('load', () => {
-            const loader = document.createElement('div');
-            loader.style.cssText = `
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background: linear-gradient(135deg, #0f172a 0%, #1e293b 50%, #334155 100%);
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                z-index: 10000;
-                transition: opacity 0.5s ease;
-            `;
+        // Loading screen: minimum display time + safety fallback
+        const preloadStart = performance.now();
+        const MIN_PRELOAD_MS = 1200; // minimum time to keep preloader visible
+        const SAFETY_FALLBACK_MS = 5000; // ensure we never get stuck
+        let preloaderHidden = false;
+        let safetyTimer = null;
 
-            const loaderText = document.createElement('div');
-            loaderText.textContent = 'Mooniris';
-            loaderText.style.cssText = `
-                font-size: 3rem;
-                font-weight: 800;
-                background: linear-gradient(45deg, var(--primary), var(--accent));
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-                background-clip: text;
-                animation: glow-pulse 2s ease-in-out infinite alternate;
-            `;
-
-            loader.appendChild(loaderText);
-            document.body.appendChild(loader);
-
-            setTimeout(() => {
-                loader.style.opacity = '0';
+        function hidePreloader() {
+            if (preloaderHidden) return;
+            preloaderHidden = true;
+            if (safetyTimer) clearTimeout(safetyTimer);
+            const preloader = document.getElementById('preloader');
+            if (preloader) {
+                preloader.classList.add('fade-out');
                 setTimeout(() => {
-                    loader.remove();
-                }, 500);
-            }, 2000);
+                    preloader.remove();
+                    document.body.classList.remove('preloading');
+                }, 500); // match CSS transition duration
+            } else {
+                document.body.classList.remove('preloading');
+            }
+        }
+
+        window.addEventListener('load', () => {
+            const elapsed = performance.now() - preloadStart;
+            const remaining = Math.max(0, MIN_PRELOAD_MS - elapsed);
+            setTimeout(hidePreloader, remaining);
         });
+
+        // Safety fallback in case 'load' delays or fails
+        safetyTimer = setTimeout(hidePreloader, SAFETY_FALLBACK_MS);
     </script>
 </body>
 
